desktop-pwas: Forward Content-Type for out-of-scope form submissions

Otherwise POST form submissions could lose their encoding type.

There are two parts to this change:

1. Save the request headers in NavigationHandle, so that we can access
   the headers in NavigationThrottles.

2. Change BookmarkAppNavigationThrottleUtils::OpenNewForegroundTab to
   also include the Content-Type header in the new navigation.

Bug: 826158
Change-Id: I30a575fcdfab15442bb331c20685a988df3b4def
Reviewed-on: https://chromium-review.googlesource.com/991616
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549119}
Former-commit-id: 971d5b4f795f3b0827ff46013d94c127baf535b9